--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,14 @@ p, a {
 }
 @media screen and (max-width: 978px) {
   .navbar {
-    padding: 0 5%;
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .navbar {
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
 }
 .navbar .nav-brand {
@@ -61,7 +68,7 @@ p, a {
   font-weight: 900;
   font-size: 2.4rem;
 }
-@media screen and (max-width: 978px) {
+@media screen and (max-width: 768px) {
   .navbar .nav-brand {
     margin: 0 auto;
     font-weight: 600;
@@ -88,15 +95,12 @@ p, a {
     justify-content: center;
     align-items: center;
     font-size: 2.4rem;
-    background-color: rgba(255, 255, 255, 0.95);
+    background-color: #0b5672;
     width: 100%;
-    height: 90vh;
-    border-top-left-radius: 100%;
-    border-bottom-left-radius: 100%;
+    height: 100vh;
     position: absolute;
-    top: 75px;
+    top: 51px;
     right: 0;
-    transform: translateX(100%) scale(0);
     transition: transform 2s;
   }
   .navbar .nav-menu--show {
