--- a/assets/sass/layout/_navbar.scss
+++ b/assets/sass/layout/_navbar.scss
@@ -5,7 +5,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 10%;
-    background-color: $primary-color;
+    background-color: $primary_color;
     border-bottom:2px solid $secondary_color;
 
     position:fixed;
@@ -13,7 +13,13 @@
     z-index: 100;
 
     @include breakpoint(laptop){
-        padding: 0 5%;
+        padding-left:5%;
+        padding-right:5%;
+    }
+
+    @include breakpoint(tablet){
+        padding-top:10px;
+        padding-bottom: 10px;
     }
 
     .nav-brand{
@@ -21,7 +27,7 @@
         font-weight:900;
         font-size:fontSize(level_4);
 
-        @include breakpoint(laptop){
+        @include breakpoint(tablet){
             margin: 0 auto;
             font-weight:600;
             font-size: fontSize(level_5);
@@ -42,16 +48,16 @@
         @include breakpoint(tablet){
             @include flex_center(column);
             font-size: fontSize(level_4);
-            background-color: rgba(255, 255, 255, 0.95);
+            background-color: $primary_color;
             width: 100%;
-            height:90vh;
-            border-top-left-radius: 100%;
-            border-bottom-left-radius: 100%;
+            height:100vh;
+            // border-top-left-radius: 100%;
+            // border-bottom-left-radius: 100%;
             position:absolute;
-            top:75px;
+            top:51px;
             right:0;
             
-            transform: translateX(100%) scale(0);
+            // transform: translateX(100%) scale(0);
             transition: transform 2s;
     
             &--show{
