--- a/assets/sass/layout/_navbar.scss
+++ b/assets/sass/layout/_navbar.scss
@@ -46,19 +46,16 @@
         font-size: fontSize(normal);
 
         @include breakpoint(tablet){
-            @include flex_center(column);
-            font-size: fontSize(level_4);
+            @include flex_start(column);
             background-color: $primary_color;
-            width: 100%;
-            height:100vh;
-            // border-top-left-radius: 100%;
-            // border-bottom-left-radius: 100%;
+            width: 60%;
+            height:92vh;
+            gap:0;
             position:absolute;
-            top:51px;
-            right:0;
-            
+            top:46px;
+            left:0;
             // transform: translateX(100%) scale(0);
-            transition: transform 2s;
+            transition: transform 1s;
     
             &--show{
                 border-radius:0;
@@ -71,10 +68,15 @@
     .nav-menu .nav-link{
         display: block;
         color:#fff;
-        padding:20px 20px;
+        padding:20px;
         transition: color .2s,
                     background-color .2s;
         position: relative;
+
+        @include breakpoint(tablet){
+            padding:10px;
+            margin:10px 0;
+        }
         
         &::after{
             content:"";
@@ -86,6 +88,12 @@
             bottom:0px;
             left:0;
             transition: width .2s;
+
+            @include breakpoint(tablet){
+                height:0;
+                width:4px;
+                border-radius:0 4px 4px 0;
+            }
         }
 
         &:hover{
@@ -94,6 +102,11 @@
 
         &:hover::after{
             width:100%;
+
+            @include breakpoint(tablet){
+                height:100%;
+                width:4px;
+            }
         }
 
         &.active{
@@ -102,10 +115,15 @@
 
         &.active::after{
             width:100%;
+
+            @include breakpoint(tablet){
+                width:4px;
+                height: 100%;
+            }
         }
     }
     
-    .call{
+    .phone-number{
         color:#fff;
         background-color: rgba(255, 255, 255, 0.2);
         border-radius:12px;
@@ -124,29 +142,15 @@
             // color:#313131;
         }
     }
-
-    .mobile-icon{
-        font-weight: 400;
-        font-size: fontSize(level_4);
-        display: none;
-
-        @include breakpoint(tablet){
-            position:relative;
-            display: flex;
-            gap:32px;
-
-            .cart-counter{
-                left:20px;
-                top:-2px;
-                font-weight: 400;
-            }
-        }
-    }
 }
 
 // Naw links separators
 .nav-menu li{
     position:relative;
+
+    @include breakpoint(tablet){
+        width:100%;
+    }
 
     &:not(:nth-child(1))::before{
         content:"";
@@ -157,5 +161,65 @@
         top:50%;
         left:0;
         transform:translateY(-50%);
+
+        @include breakpoint(tablet){
+            width:55%;
+            height:1px;
+            top:0;
+            left:12px;
+        }
+    }
+}
+
+// Manage mobile icons in navbar
+
+.navbar .mobile-icon{
+    font-weight: 400;
+    font-size: fontSize(level_5);
+    display: none;
+
+    @include breakpoint(tablet){
+        display: flex;
+    }
+}
+
+.navbar .mobile-icon.contacts{
+    align-self: center;
+    margin: auto 0 50px;
+    flex-direction: column;
+    
+    .help-text{
+        font-size: 10px;
+        text-align:center;
+        color:rgba(255, 255, 255, 0.5);
+        padding-bottom: 10px;
+        margin-bottom: 10px;
+        position:relative;
+        
+        &::after{
+            content:"";
+            width:40%;
+            height:1px;
+            background-color: rgba(255, 255, 255, 0.5);
+            position:absolute;
+            bottom:0;
+            left:50%;
+            transform: translateX(-50%);
+        }
+    }
+
+    .contacts-container{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+
+        a{
+            @include flex_center();
+            width:35px;
+            height:35px;
+            border-radius: 50%;
+            background-color: rgba(255, 255, 255, 0.3);
+            margin:0;
+        }
     }
 }
