--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,16 +96,16 @@ p, a {
     align-items: start;
     background-color: #0b5672;
     width: 60%;
-    height: 92vh;
+    height: 98vh;
     gap: 0;
     position: absolute;
     top: 46px;
     left: 0;
-    transition: transform 1s;
+    transform: translateX(-100%);
+    transition: transform 0.3s;
   }
   .navbar .nav-menu--show {
-    border-radius: 0;
-    transform: translateX(0) scale(1);
+    transform: translateX(0);
     z-index: 10;
   }
 }
@@ -230,7 +230,7 @@ p, a {
   font-size: 10px;
   text-align: center;
   color: rgba(255, 255, 255, 0.5);
-  padding-bottom: 10px;
+  padding: 0 10px 10px;
   margin-bottom: 10px;
   position: relative;
 }
