--- a/assets/sass/layout/_navbar.scss
+++ b/assets/sass/layout/_navbar.scss
@@ -49,17 +49,16 @@
             @include flex_start(column);
             background-color: $primary_color;
             width: 60%;
-            height:92vh;
+            height:98vh;
             gap:0;
             position:absolute;
             top:46px;
             left:0;
-            // transform: translateX(100%) scale(0);
-            transition: transform 1s;
+            transform: translateX(-100%);
+            transition: transform .3s;
     
             &--show{
-                border-radius:0;
-                transform: translateX(0) scale(1);
+                transform: translateX(0);
                 z-index:10; 
             }
         }
@@ -192,7 +191,7 @@
         font-size: 10px;
         text-align:center;
         color:rgba(255, 255, 255, 0.5);
-        padding-bottom: 10px;
+        padding:0 10px 10px;
         margin-bottom: 10px;
         position:relative;
         
