--- a/assets/sass/utils/_variables.scss
+++ b/assets/sass/utils/_variables.scss
@@ -8,6 +8,9 @@ $dark_color:#313131;
 
 $main_margin : 10%;
 
+$title_font : "Montserrat", "sans-serif";
+$default_font: "Source Sans Pro", "sans-serif";
+
 // LISTS & MAPS
 
 //Font size
