--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
 *,
 ::before,
@@ -261,4 +261,33 @@ p, a {
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.3);
   margin: 0;
+}
+
+div.banner {
+  padding: 60px 10% auto;
+  height: 90vh;
+  background-color: rgba(173, 216, 230, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.banner-content {
+  width: 50%;
+}
+.banner-content p {
+  font-size: 2.4rem;
+}
+.banner-content p.salutation {
+  font-family: "Montserrat", "sans-serif";
+  font-weight: 500;
+}
+.banner-content h1 span {
+  font-size: 8rem;
+}
+.banner-content h1 span:nth-child(2) {
+  display: block;
+  width: max-content;
+  color: black;
+  opacity: 0.05;
 }
