--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -7,9 +7,9 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6{
-    font-family: "Montserrat", "sans-serif";
+    font-family: $title_font;
 }
 
 p, a{
-    font-family: "Source Sans Pro", "sans-serif";
+    font-family: $default_font;
 }
