Header banner in progress

--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -1,5 +1,16 @@
 
 
 .btn{
+    display: flex;
+    justify-content: center;
+    gap:10px;
+    width:max-content;
+    padding:10px 20px;
+    font-size:fontSize(level_5);
 
+
+    &-default{
+        background-color: $primary_color;
+        color:#fff;
+    }
 }
