--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,19 @@ p, a {
   font-family: "Source Sans Pro", "sans-serif";
 }
 
+.btn {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  width: max-content;
+  padding: 10px 20px;
+  font-size: 2rem;
+}
+.btn-default {
+  background-color: #0b5672;
+  color: #fff;
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -264,7 +277,7 @@ p, a {
 }
 
 div.banner {
-  padding: 60px 10% auto;
+  padding: 60px 10% 0;
   height: 90vh;
   background-color: rgba(173, 216, 230, 0.5);
   display: flex;
@@ -273,6 +286,10 @@ div.banner {
 }
 
 .banner-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
   width: 50%;
 }
 .banner-content p {
@@ -283,7 +300,7 @@ div.banner {
   font-weight: 500;
 }
 .banner-content h1 span {
-  font-size: 8rem;
+  font-size: 5.56rem;
 }
 .banner-content h1 span:nth-child(2) {
   display: block;
