--- a/assets/sass/layout/_section.scss
+++ b/assets/sass/layout/_section.scss
@@ -38,6 +38,7 @@ section.container{
 
     .left-side{
         padding: 60px 60px 60px 10%;
+        justify-content: center;
     }
 
     .right-side{
@@ -50,7 +51,7 @@ section.container{
         gap:20px;
         width: 50%;
         height: 100%;
-        min-height:300px;
+        min-height:565px;
 
         .main-title::after{
             left:0;
@@ -58,7 +59,7 @@ section.container{
         }
     
         .description, p{
-            width:80%;
+            width:90%;
             font-size: fontSize(level_5);
         }
     
