--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,7 +281,7 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 40px;
   padding: 60px 10%;
 }
 section .main-title {
@@ -325,7 +325,6 @@ section.container .left-side, section.container .right-side {
   gap: 20px;
   width: 50%;
   height: 100%;
-  min-height: 565px;
 }
 section.container .left-side .main-title::after, section.container .right-side .main-title::after {
   left: 0;
@@ -375,6 +374,9 @@ div.banner {
   opacity: 0.05;
 }
 
+section.contacts .left-side, section.contacts .right-side {
+  min-height: 565px;
+}
 section.contacts .left-side {
   background-color: #d8d8d8;
 }
@@ -413,7 +415,7 @@ section.contacts .right-side .contacts-list-icons-container {
   height: 100%;
   width: 6px;
   background-color: #0b5672;
-  border-radius: 4px;
+  border-radius: 3px;
   position: absolute;
   left: 0;
   display: flex;
@@ -426,9 +428,47 @@ section.contacts .right-side .contacts-list-icons-container i {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 20px;
-  height: 20px;
-  color: #4ab7e0;
+  width: 25px;
+  height: 25px;
+  color: #FFF;
   border-radius: 50%;
   background-color: #4ab7e0;
+}
+
+section.statistics .stats-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+}
+section.statistics .stats-container .stat {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  width: fit-content;
+}
+section.statistics .stats-container .stat p:first-child {
+  width: 50px;
+  height: 50px;
+  padding: 50px;
+  border-radius: 50%;
+  background-color: #4ab7e0;
+  color: #fff;
+  font-size: 2.4rem;
+  font-weight: 600;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+section.statistics .stats-container .stat p:last-child {
+  display: block;
+  text-align: center;
+  font-size: 1.6rem;
+  font-weight: 300;
+  width: 180px;
 }
