--- a/assets/sass/page/_index.scss
+++ b/assets/sass/page/_index.scss
@@ -59,6 +59,9 @@ div.banner{
 // --------------------------------
 
 section.contacts{
+    .left-side, .right-side{
+        min-height:565px;   // Don't know why height:100% is not taking effect
+    }
 
     .left-side{
         background-color: #d8d8d8;
@@ -109,7 +112,7 @@ section.contacts{
             height:100%;
             width:6px;
             background-color: $primary_color;
-            border-radius: 4px;
+            border-radius: 3px;
             position:absolute;
             left:0;
 
@@ -120,14 +123,53 @@ section.contacts{
 
             i{
                 @include flex_center;
-                width: 20px;
-                height: 20px;
-                color: $secondary_color;
+                width: 25px;
+                height: 25px;
+                color: #FFF;
                 border-radius:50%;
                 background-color: $secondary_color;
-                // transform: translateX(-50%)
-
             }
         }
     }
+}
+
+
+// SECTION - STATISTICS
+// ---------------------------------
+
+section.statistics{
+
+    .stats-container{
+        @include flex_center;
+        gap:40px;
+
+        .stat{
+            @include flex_center(column);
+            gap:16px;
+            width: fit-content;
+        }
+
+        .stat p:first-child{
+            width:50px;
+            height: 50px;
+            padding:50px;
+            border-radius:50%;
+            background-color: $secondary_color;
+            color:#fff;
+            font-size: fontSize(level_4);
+            font-weight: 600;
+            text-align:center;
+
+            @include flex_center;
+        }
+
+        .stat p:last-child{
+            display: block;
+            text-align: center;
+            font-size:fontSize(normal);
+            font-weight: 300;
+            width:180px;
+        }
+    }
+
 }
