--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -7,10 +7,13 @@
     width:max-content;
     padding:10px 20px;
     font-size:fontSize(level_5);
+    border: 2px solid #fff;
 
     &-default{
         background-color: $primary_color;
         color:#fff;
+
+        
     }
 }   
 
