--- a/assets/sass/page/_index.scss
+++ b/assets/sass/page/_index.scss
@@ -198,6 +198,7 @@ section.services{
         @include flex_center;
         flex-wrap: wrap;
         gap:30px;
+        max-width: 930px;
     }
 
     .services-container .service{
