--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -634,3 +634,21 @@ section.projects .tabs-container .tab.active::after {
   left: 50%;
   transform: translateX(-50%) rotate(45deg);
 }
+section.projects .gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+  padding: 20px 10%;
+  background-color: #f1f1f1;
+}
+section.projects .gallery li {
+  width: 250px;
+  height: 250px;
+  background-color: rgb(255, 255, 255);
+  border: 1px solid #4ab7e0;
+}
+section.projects .gallery img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
