--- a/assets/sass/page/_index.scss
+++ b/assets/sass/page/_index.scss
@@ -358,4 +358,26 @@ section.projects{
             
         }
     }
+
+    .gallery{
+        display: flex;
+        flex-wrap: wrap;
+        gap:12px;
+        padding:20px 10%;
+        background-color:#f1f1f1;
+     
+        li{
+            // flex-grow: 1;
+            width:250px;
+            height:250px;
+            background-color: rgba(255, 255, 255, 1);
+            border:1px solid $secondary_color;
+        }
+
+        img{
+            width:100%;
+            height:100%;
+            object-fit: cover;
+        }
+    }
 }
